Implement fullpage editor

--- a/pages/index.html
+++ b/pages/index.html
@@ -71,6 +71,6 @@ going to be able to moderate this, I recommend just hitting delete.
 </div>
 
 <link rel=stylesheet href="/_resources/css/editor.css">
-<script src="/_resources/js/script.js"></script>
+<script src="/_resources/js/startpage.js"></script>
 
 <<foot>>
