pages{/examples/collab => }/index.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,6 @@
 <<head {
-  title: "ProseMirror collab example"
+  title: "ProseMirror collab example",
+  type: "frontpage"
 }>>
 
 <style>
@@ -70,7 +71,7 @@ going to be able to moderate this, I recommend just hitting delete.
 </div>
 
 <link rel=stylesheet href="/css/editor.css">
-<script src="../prosemirror.js"></script>
-<script src="example.js"></script>
+<script src="/js/prosemirror.js"></script>
+<script src="/js/script.js"></script>
 
 <<foot>>
