--- a/pages/index.html
+++ b/pages/index.html
@@ -70,8 +70,8 @@ going to be able to moderate this, I recommend just hitting delete.
   </span>
 </div>
 
-<link rel=stylesheet href="/css/editor.css">
-<script src="/js/prosemirror.js"></script>
-<script src="/js/script.js"></script>
+<link rel=stylesheet href="/_resources/css/editor.css">
+<script src="/_resources/js/prosemirror.js"></script>
+<script src="/_resources/js/script.js"></script>
 
 <<foot>>
