--- a/pages/index.html
+++ b/pages/index.html
@@ -48,8 +48,7 @@ ProsePad is a service for collaboratively editing documents.
 
 <div class=docinfo>
   Connected to: <span id="connected">
-    <span id="docname">None</span>
-    <span id="users"></span>
+    <span id="docname">None</span> (<span class="user-count">…</span>)
     <button type=button id="changedoc">Change</button>
   </span>
 </div>
