Use relative URLs

--- a/pages/index.html
+++ b/pages/index.html
@@ -54,8 +54,8 @@ ProsePad is a service for collaboratively editing documents.
 </div>
 </article>
 
-<link rel=stylesheet href="/_resources/css/editor.css">
-<script src="/_resources/js/startpage.js"></script>
+<link rel=stylesheet href="_resources/css/editor.css">
+<script src="_resources/js/startpage.js"></script>
 
 <<foot>>
 </body>
